added skills section and optimised  images

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Karla", sans-serif;
+  background-image: url("./assets/img/background/background.webp");
+
+  /* Add the blur effect */
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
