uploading full working  website

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,17 @@ hr {
 }
 
 .container-box {
-  background-color: white;
+  width: 80%;
+  background-color: transparent;
+  position: relative;
+  z-index: 9;
+}
+
+.particles-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
