--- a/src/pages/experience/experience.styles.css
+++ b/src/pages/experience/experience.styles.css
@@ -9,3 +9,8 @@
 .jumbo-style {
   background-image: linear-gradient(-225deg, #2cd8d5 0%, #6b8dd6 48%, #8e37d7 100%);
 }
+
+.body-title-style {
+  font-size: 25px;
+  font-weight: 800;
+}
