Added 2 new projects, edited skills and experience section

--- a/src/pages/contact-form/contact-form.styles.css
+++ b/src/pages/contact-form/contact-form.styles.css
@@ -3,3 +3,12 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+#youtube-btn {
+  border-color: #f83f37;
+  color: #f83f37;
+}
+#youtube-btn:hover {
+  background-color: #f83f37;
+  color: #ffffff;
+}
