--- a/src/pages/experience/experience.styles.css
+++ b/src/pages/experience/experience.styles.css
@@ -1,5 +1,5 @@
 .img-resize {
-  width: 10em;
+  width: 8em;
 }
 
 .style {
@@ -7,7 +7,12 @@
 }
 
 .jumbo-style {
-  background-image: linear-gradient(-225deg, #2cd8d5 0%, #6b8dd6 48%, #8e37d7 100%);
+  background-image: linear-gradient(
+    -225deg,
+    #2cd8d5 0%,
+    #6b8dd6 48%,
+    #8e37d7 100%
+  );
 }
 
 .body-title-style {
